# Scribe-Addon-Manager

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
scripts/: prepare-release-assets.mjs  test-bbcode.mjs  test-library-filters.mjs
src/: app_paths.rs  config.rs  error.rs  hash.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/target-tauri-test/: .rustc_info.json
src-ui/: bbcode.ts  libraryFilters.ts  main.ts  styles.css  types.ts
src/api/: mod.rs  models.rs
src/cache/: http_cache.rs  mod.rs
src/commands/: mod.rs
src/install/: apply.rs  backup.rs  dependencies.rs  dependency_graph.rs  mod.rs  plan.rs  remote.rs  remove.rs  update.rs  update_all.rs  zip_safety.rs
src/local/: match_remote.rs  metadata.rs  mod.rs  update_plan.rs  version.rs
