[package]
name = "eso-addon-manager-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
eso-addon-manager = { path = ".." }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
