[package]
name = "eso-addon-manager-desktop"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
eso-addon-manager = { path = ".." }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tempfile = "3"
